fix: overflow auto by default

--- a/src/components/magic-iframe/magic-iframe.css
+++ b/src/components/magic-iframe/magic-iframe.css
@@ -2,6 +2,7 @@
   display: block;
   position: relative;
   -webkit-overflow-scrolling:touch;
+  overflow: auto;
 }
 .seb-iframe {
   overflow: hidden;
